# VideoSudoku

./: .gitignore  .gitmodules  CMakeLists.txt  LICENCE  Makefile  README.md  Readme.md  SVMOCR.cc  SVMOCR.h  SudokuOCR.h  VideoSudoku.cc  VideoSudoku.h  debuglog.h  dlx.c  dlx.h  dlx_sudoku.c  dlx_sudoku.h  vs  vs.cc
include/: SVMOCR.h  SudokuOCR.h  VideoSudoku.h  debuglog.h  dlx.h  dlx_sudoku.h
include/videosudoku/: app.hpp  normalize.hpp  ocr.hpp  preproc.hpp  solver.hpp
include/videosudoku/imgproc/: helper.hpp  number.hpp  sudoku.hpp
resource/model/: normalized30x30.model
resource/test/: diff.txt
source/: SVMOCR.cc  SudokuOCR.cc  dlx.c  dlx_sudoku.c  main.cpp
source/videosudoku/: app.cpp  normalize.cpp  ocr.cpp  preproc.cpp  solver.cpp
source/videosudoku/imgproc/: helper.cpp  number.cpp  sudoku.cpp
src/: SVMOCR.cc  SudokuOCR.cc  VideoSudoku.cc  dlx_sudoku.c  vs.cc
